# ai-social-network

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
agent/: __init__.py  agent_manager.py  start.sh  webhook.py
backend/: __init__.py  main.py  seed.py  start.sh
backend/data/: posts.json
frontend/: .env.local  __init__.py  start.sh  streamlit_app.py
